--- a/resume.yaml
+++ b/resume.yaml
@@ -104,9 +104,7 @@ experience:
 
   - title: Pesquisador em Visão Computacional
     org: Universidade de Brasília
-    start: Ago
-
- 2020
+    start: Ago 2020
     end: Jan 2021
     location: Brasília, Brasil
     details:
